# Minus80

./: .gitignore  .travis.yml  LICENSE.md  README.md  credentials.tar.gz.enc  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
M80/: M80.py  Sample.py  Samples.py  Tools.py  __init__.py
cloud_functions/: deploy.sh  main.py  requirements.txt
docs/: Makefile  accessions_and_cohorts.rst  api.rst  cloud.rst  conf.py  config.rst  freezable.rst  index.rst  make.bat  tools.rst
hosting/public/: index.html  signup.html
hosting/public/css/: minus80.css
minus80/: Accession.py  Accessions.py  CloudData.py  Cohort.py  ColumnDB.py  Config.py  Exceptions.py  FireBaseCloudData.py  Freezable.py  GCPCloudData.py  Log.py  Project.py  RawFile.py  RelationalDB.py  S3CloudData.py  SQLiteDict.py  Sample.py  Samples.py  Tools.py  __init__.py
minus80/cli/: minus80  minus80.py
tests/: conftest.py  notest_CloudData.py  notest_cli.py  test_Accession.py  test_CloudData.py  test_Cohort.py  test_Config.py  test_FireBaseCloudData.py  test_Freezable.py  test_Project.py  test_Tools.py  test_cli.py
tests/data/: Sample1_ATGTCA_L007_R1_001.fastq  Sample1_ATGTCA_L007_R2_001.fastq  Sample1_ATGTCA_L008_R1_001.fastq  Sample1_ATGTCA_L008_R2_001.fastq  Sample2_ATGTCA_L005_R1_001.fastq  Sample2_ATGTCA_L005_R2_001.fastq  Sample2_ATGTCA_L006_R1_001.fastq  Sample2_ATGTCA_L006_R2_001.fastq  test_accession.yaml
